--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ keywords =
 
 [options]
 package_dir =
-    =coolruns
+    = .
 packages = find:
 install_requires =
     numpy
@@ -39,7 +39,7 @@ python_requires = >=3.10
 zip_safe = False
 
 [options.packages.find]
-where = coolruns
+where = .
 
 [options.extras_require]
 test =
