--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,10 @@ package_dir =
     = .
 packages = find:
 install_requires =
-    numpy
-    pandas
+    numpy>=2.4.0.dev0
+    pandas>=3.0.0.dev0
+    setuptools>=80.9.0
+    scipy>=1.17.0.dev0
 python_requires = >=3.10
 zip_safe = False
 
