performance and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,13 +7,13 @@ long_description_content_type = text/markdown
 url = "https://github.com/dangreb/CoolRunnings"
 author = dangreb
 author_email = greb.pro@gmail.com
-license = MIT
+license = Apache-2.0
 license_file = LICENSE
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Education
     Intended Audience :: Science/Research
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
